compiler/tools/fpp-check/test/redef/constant_in_module.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/constant_in_module.fpp: 3.3
  constant x = 1
  ^
error: redefinition of symbol x
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/constant_in_module.fpp: 2.3
  constant x = 0
  ^
